[tool.poetry]
name = "dummy-docker"
version = "0.1.0"
description = ""
authors = ["Pinto Tetteh Aaron <aaronpinto111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
